change the content of "how_data_calculate_tip" key and "how_data_is_calculate_key" key. yangyuxi

--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "حول بيانات استخدام الطاقة \n\n استخدام الطاقة وتوفيرها هو تقديرات وليست قياسات دقيقة. \n\n تعتمد تقديراتنا على اختبارات خاضعة للرقابة، لذلك قد تختلف نتائجك الفعلية. \n\n يعتمد استخدام الطاقة في العالم الحقيقي على بيئتك وعاداتك المحددة. \n\n قد تختلف قراءات تطبيقنا عن عداد المرافق الخاص بك أو الأجهزة الأخرى.",
+    "how_data_calculate_tip": "استخدام الطاقة وتوفيرها هو تقديرات وليست قياسات دقيقة. \n\n تعتمد تقديراتنا على اختبارات خاضعة للرقابة، لذلك قد تختلف نتائجك الفعلية. \n\n يعتمد استخدام الطاقة في العالم الحقيقي على بيئتك وعاداتك المحددة. \n\n قد تختلف قراءات تطبيقنا عن عداد المرافق الخاص بك أو الأجهزة الأخرى.",
     "select_statistic_range_key": "حدد النطاق الإحصائي",
     "overview_key": "نظرة عامة",
     "value_must_between_10_9999_key": "يجب أن تكون القيمة بين 10 و 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "قم بتحويل المعرفة للانتقال إلى \"إضافة جهاز\" وانقر على \"أدخل\".",
-    "how_data_is_calculate_key": "كيف يتم حساب البيانات",
+    "how_data_is_calculate_key": "حول بيانات استخدام الطاقة",
     "energy_select_device_ktip_key": "يرجى ملاحظة أنه يمكنك بدء وضع ECO فقط على الأجهزة التي تعمل.",
     "CL_DV_OV_g800_mode_bottom_top": "سخان سفلي + علوي",
     "CL_DV_OV_g800_mode_hot_air": "هواء حار",
