--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Относно данните за потреблението на енергия \n\n Показаното потребление на енергия и спестяванията са приблизителни, а не точни измервания. \n\n Нашите оценки се основават на контролирани тестове, така че действителните ви резултати може да варират. \n\n Използването на енергия в реалния свят зависи от вашата специфична среда и навици. \n\n Показанията на нашето приложение може да се различават от измервателния уред за комунални услуги или други устройства.",
+    "how_data_calculate_tip": "Показаното потребление на енергия и спестяванията са приблизителни, а не точни измервания. \n\n Нашите оценки се основават на контролирани тестове, така че действителните ви резултати може да варират. \n\n Използването на енергия в реалния свят зависи от вашата специфична среда и навици. \n\n Показанията на нашето приложение може да се различават от измервателния уред за комунални услуги или други устройства.",
     "select_statistic_range_key": "изберете статистическия диапазон",
     "overview_key": "преглед",
     "value_must_between_10_9999_key": "Стойността трябва да бъде между 10 и 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Завъртете знанието, за да преминете към „Добавяне на устройство“ и щракнете върху „Въвеждане“.",
-    "how_data_is_calculate_key": "Как се изчисляват данните",
+    "how_data_is_calculate_key": "Относно данните за потреблението на енергия",
     "energy_select_device_ktip_key": "Моля, имайте предвид, че можете да стартирате ECO режима само на работещи устройства.",
     "CL_DV_OV_g800_mode_bottom_top": "Долен + горен нагревател",
     "CL_DV_OV_g800_mode_hot_air": "Горещ въздух",
