--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "O údajích o spotřebě energie \n\n Zobrazená spotřeba energie a úspory jsou odhady, nikoli přesná měření. \n\n Naše odhady jsou založeny na kontrolovaných testech, takže vaše skutečné výsledky se mohou lišit. \n\n Spotřeba energie v reálném světě závisí na vašem konkrétním prostředí a zvycích. \n\n Hodnoty naší aplikace se mohou lišit od vašeho elektroměru nebo jiných zařízení.",
+    "how_data_calculate_tip": "Zobrazená spotřeba energie a úspory jsou odhady, nikoli přesná měření. \n\n Naše odhady jsou založeny na kontrolovaných testech, takže vaše skutečné výsledky se mohou lišit. \n\n Spotřeba energie v reálném světě závisí na vašem konkrétním prostředí a zvycích. \n\n Hodnoty naší aplikace se mohou lišit od vašeho elektroměru nebo jiných zařízení.",
     "select_statistic_range_key": "vyberte statistický rozsah",
     "overview_key": "přehled",
     "value_must_between_10_9999_key": "Hodnota musí byť medzi 10 a 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Otočením se přesuňte na \"Přidat zařízení\" a klikněte na \"Enter\".",
-    "how_data_is_calculate_key": "Jak se data počítají",
+    "how_data_is_calculate_key": "O údajích o spotřebě energie",
     "energy_select_device_ktip_key": "Upozorňujeme, že režim ECO lze spustit pouze na zařízeních, která jsou v provozu.",
     "CL_DV_OV_g800_mode_bottom_top": "Dolní + horní ohřev",
     "CL_DV_OV_g800_mode_hot_air": "Horký vzduch",
