--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Om data om energiforbrug \n\n Det viste energiforbrug og besparelser er skøn, ikke nøjagtige mål. \n\n Vores estimater er baseret på kontrollerede tests, så dine faktiske resultater kan variere. \n\n Virkelig energiforbrug afhænger af dit specifikke miljø og dine vaner. \n\n Vores apps aflæsninger kan afvige fra dit elmåler eller andre enheder.",
+    "how_data_calculate_tip": "Det viste energiforbrug og besparelser er skøn, ikke nøjagtige mål. \n\n Vores estimater er baseret på kontrollerede tests, så dine faktiske resultater kan variere. \n\n Det virkelige energiforbrug afhænger af dit specifikke miljø og dine vaner. \n\n Vores apps aflæsninger kan afvige fra dit elmåler eller andre enheder.",
     "select_statistic_range_key": "vælg statistisk rækkevidde",
     "overview_key": "oversigt",
     "value_must_between_10_9999_key": "Værdien skal være mellem 10 og 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Drej knappen for at flytte til \"Tilføj enhed\", og klik på \"Enter\".",
-    "how_data_is_calculate_key": "Hvordan data beregnes",
+    "how_data_is_calculate_key": "Om energiforbrugsdata",
     "energy_select_device_ktip_key": "Bemærk, at du kun kan starte ECO-tilstand på enheder, der er i drift.",
     "CL_DV_OV_g800_mode_bottom_top": "Under- + overvarme",
     "CL_DV_OV_g800_mode_hot_air": "Varm luft",
