--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "Neustart",
-    "how_data_calculate_tip": "Informationen zu Energieverbrauchsdaten \n\n Der angegebene Energieverbrauch und die angegebenen Einsparungen sind Schätzungen und keine genauen Messungen. \n\n Unsere Schätzungen basieren auf kontrollierten Tests, Ihre tatsächlichen Ergebnisse können daher abweichen. \n\n Der tatsächliche Energieverbrauch hängt von Ihrer spezifischen Umgebung und Ihren Gewohnheiten ab. \n\n Die Messwerte unserer App können von denen Ihres Stromzählers oder anderer Geräte abweichen.",
+    "how_data_calculate_tip": "Der angegebene Energieverbrauch und die angegebenen Einsparungen sind Schätzungen und keine genauen Messungen. \n\n Unsere Schätzungen basieren auf kontrollierten Tests, Ihre tatsächlichen Ergebnisse können daher abweichen. \n\n Der tatsächliche Energieverbrauch hängt von Ihrer spezifischen Umgebung und Ihren Gewohnheiten ab. \n\n Die Messwerte unserer App können von denen Ihres Stromzählers oder anderer Geräte abweichen.",
     "select_statistic_range_key": "wählen Sie den statistischen Bereich",
     "overview_key": "Überblick",
     "value_must_between_10_9999_key": "Der Wert muss zwischen 10 und 9999 liegen.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Drehen Sie den Knopf, um zu „Gerät hinzufügen“ zu gelangen und klicken Sie auf „Eingeben“.",
-    "how_data_is_calculate_key": "Wie Daten berechnet werden",
+    "how_data_is_calculate_key": "Informationen zu Energieverbrauchsdaten",
     "energy_select_device_ktip_key": "Bitte beachten Sie, dass Sie den ECO-Modus nur bei Geräten im Betrieb starten können.",
     "CL_DV_OV_g800_mode_bottom_top": "Unterhitze + Oberhitze",
     "CL_DV_OV_g800_mode_hot_air": "Heißluft",
