--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Σχετικά με τα δεδομένα χρήσης ενέργειας \n\n Η κατανάλωση ενέργειας και η εξοικονόμηση που εμφανίζονται είναι εκτιμήσεις και όχι ακριβείς μετρήσεις. \n\n Οι εκτιμήσεις μας βασίζονται σε ελεγχόμενες δοκιμές, επομένως τα πραγματικά σας αποτελέσματα ενδέχεται να διαφέρουν. \n\n Η χρήση ενέργειας στον πραγματικό κόσμο εξαρτάται από το συγκεκριμένο περιβάλλον και τις συνήθειές σας. \n\n Οι ενδείξεις της εφαρμογής μας ενδέχεται να διαφέρουν από τον βοηθητικό μετρητή σας ή άλλες συσκευές.",
+    "how_data_calculate_tip": "Η κατανάλωση ενέργειας και η εξοικονόμηση που εμφανίζονται είναι εκτιμήσεις και όχι ακριβείς μετρήσεις. \n\n Οι εκτιμήσεις μας βασίζονται σε ελεγχόμενες δοκιμές, επομένως τα πραγματικά σας αποτελέσματα ενδέχεται να διαφέρουν. \n\n Η χρήση ενέργειας στον πραγματικό κόσμο εξαρτάται από το συγκεκριμένο περιβάλλον και τις συνήθειές σας. \n\n Οι ενδείξεις της εφαρμογής μας ενδέχεται να διαφέρουν από τον βοηθητικό μετρητή σας ή άλλες συσκευές.",
     "select_statistic_range_key": "επιλέξτε στατιστικό εύρος",
     "overview_key": "επισκόπηση",
     "value_must_between_10_9999_key": "Η τιμή πρέπει να είναι μεταξύ 10 και 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Γυρίστε τη γνώση για να μετακινηθείτε στην \"Προσθήκη συσκευής\" και κάντε κλικ στο \"Enter\".",
-    "how_data_is_calculate_key": "Πώς υπολογίζονται τα δεδομένα",
+    "how_data_is_calculate_key": "Σχετικά με τα δεδομένα χρήσης ενέργειας",
     "energy_select_device_ktip_key": "Παρακαλώ σημειώστε ότι μπορείτε να ξεκινήσετε τη λειτουργία ECO μόνο σε συσκευές που είναι σε λειτουργία.",
     "CL_DV_OV_g800_mode_bottom_top": "Κάτω + πάνω αντίσταση",
     "CL_DV_OV_g800_mode_hot_air": "Θερμός αέρας",
