--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Acerca de los datos de uso de energía \n\n El uso y ahorro de energía que se muestran son estimaciones, no medidas exactas. \n\n Nuestras estimaciones se basan en pruebas controladas, por lo que sus resultados reales pueden variar. \n\n El uso de energía en el mundo real depende de su entorno y hábitos específicos. \n\n Las lecturas de nuestra aplicación pueden diferir de las de su medidor de servicios públicos u otros dispositivos.",
+    "how_data_calculate_tip": "El uso y ahorro de energía que se muestran son estimaciones, no medidas exactas. \n\n Nuestras estimaciones se basan en pruebas controladas, por lo que sus resultados reales pueden variar. \n\n El uso de energía en el mundo real depende de su entorno y hábitos específicos. \n\n Las lecturas de nuestra aplicación pueden diferir de las de su medidor de servicios públicos u otros dispositivos.",
     "select_statistic_range_key": "seleccionar rango estadístico",
     "overview_key": "visión general",
     "value_must_between_10_9999_key": "El valor debe estar entre 10 y 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Gire el botón para pasar a \"Agregar dispositivo\" y haga clic en \"Entrar\".",
-    "how_data_is_calculate_key": "Cómo se calculan los datos",
+    "how_data_is_calculate_key": "Acerca de los datos de uso de energía",
     "energy_select_device_ktip_key": "Tenga en cuenta que solo puede iniciar el modo ECO en dispositivos en funcionamiento.",
     "CL_DV_OV_g800_mode_bottom_top": "Calentador inferior + calentador superior",
     "CL_DV_OV_g800_mode_hot_air": "Aire caliente",
