--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "درباره داده های مصرف انرژی \n\n مصرف انرژی و صرفه جویی نشان داده شده تخمینی است، نه اندازه گیری دقیق. \n\n تخمین های ما بر اساس آزمایش های کنترل شده است، بنابراین نتایج واقعی شما ممکن است متفاوت باشد. \n\n مصرف انرژی در دنیای واقعی به محیط و عادات خاص شما بستگی دارد. \n\n خوانش برنامه ما ممکن است با ابزار سنج یا دستگاه های دیگر شما متفاوت باشد.",
+    "how_data_calculate_tip": "مصرف انرژی و صرفه جویی نشان داده شده تخمینی است، نه اندازه گیری دقیق. \n\n تخمین های ما بر اساس آزمایش های کنترل شده است، بنابراین نتایج واقعی شما ممکن است متفاوت باشد. \n\n مصرف انرژی در دنیای واقعی به محیط و عادات خاص شما بستگی دارد. \n\n خوانش برنامه ما ممکن است با ابزار سنج یا دستگاه های دیگر شما متفاوت باشد.",
     "select_statistic_range_key": "انتخاب محدوده آماری",
     "overview_key": "بررسی اجمالی",
     "value_must_between_10_9999_key": "مقدار باید بین 10 و 9999 باشد.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "برای رفتن به «افزودن دستگاه» اطلاعات را روشن کنید و روی «Enter» کلیک کنید.",
-    "how_data_is_calculate_key": "چگونه داده‌ها محاسبه می‌شوند",
+    "how_data_is_calculate_key": "درباره داده های مصرف انرژی",
     "energy_select_device_ktip_key": "لطفاً توجه داشته باشید که فقط می‌توانید حالت ECO را در دستگاه‌های در حال کار شروع کنید.",
     "CL_DV_OV_g800_mode_bottom_top": "بخاری پایین + بالا",
     "CL_DV_OV_g800_mode_hot_air": "هوای داغ",
