--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Tietoja energiankäyttötiedoista \n\n Esitetyt energiankulutukset ja säästöt ovat arvioita, eivät tarkkoja mittoja. \n\n Arviomme perustuvat kontrolloituihin testeihin, joten todelliset tulokset voivat vaihdella. \n\n Todellinen energiankäyttö riippuu erityisestä ympäristöstäsi ja tavoistasi. \n\n Sovelluksemme lukemat voivat poiketa sähkömittaristasi tai muista laitteistasi.",
+    "how_data_calculate_tip": "Esitetyt energiankulutukset ja säästöt ovat arvioita, eivät tarkkoja mittoja. \n\n Arviomme perustuvat kontrolloituihin testeihin, joten todelliset tulokset voivat vaihdella. \n\n Todellinen energiankäyttö riippuu erityisestä ympäristöstäsi ja tavoistasi. \n\n Sovelluksemme lukemat voivat poiketa sähkömittaristasi tai muista laitteistasi.",
     "select_statistic_range_key": "valitse tilastollinen alue",
     "overview_key": "yleiskatsaus",
     "value_must_between_10_9999_key": "Arvon on oltava välillä 10–9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Siirry \"Lisää laite\" -kohtaan kääntämällä tietämystä ja napsauta \"Enter\".",
-    "how_data_is_calculate_key": "Miten tiedot lasketaan",
+    "how_data_is_calculate_key": "Tietoja energiankäyttötiedoista",
     "energy_select_device_ktip_key": "Huomaa, että voit käynnistää ECO-tilan vain toiminnassa olevissa laitteissa.",
     "CL_DV_OV_g800_mode_bottom_top": "Ala- + ylälämpö",
     "CL_DV_OV_g800_mode_hot_air": "Kiertoilma",
