--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "À propos des données de consommation d'énergie \n\n La consommation d'énergie et les économies indiquées sont des estimations et non des mesures exactes. \n\n Nos estimations sont basées sur des tests contrôlés, vos résultats réels peuvent donc varier. \n\n La consommation d'énergie réelle dépend de votre environnement et de vos habitudes spécifiques. \n\n Les relevés de notre application peuvent différer de ceux de votre compteur utilitaire ou d'autres appareils.",
+    "how_data_calculate_tip": "La consommation d'énergie et les économies indiquées sont des estimations et non des mesures exactes. \n\n Nos estimations sont basées sur des tests contrôlés, vos résultats réels peuvent donc varier. \n\n La consommation d'énergie réelle dépend de votre environnement et de vos habitudes spécifiques. \n\n Les relevés de notre application peuvent différer de ceux de votre compteur utilitaire ou d'autres appareils.",
     "select_statistic_range_key": "sélectionner la plage statistique",
     "overview_key": "aperçu",
     "value_must_between_10_9999_key": "La valeur doit être comprise entre 10 et 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Tournez le bouton pour passer à « Ajouter un appareil » et cliquez sur « Entrer ».",
-    "how_data_is_calculate_key": "Comment les données sont calculées",
+    "how_data_is_calculate_key": "À propos des données de consommation d'énergie",
     "energy_select_device_ktip_key": "Veuillez noter que vous ne pouvez démarrer le mode ECO que sur des appareils en fonctionnement.",
     "CL_DV_OV_g800_mode_bottom_top": "Chauffage sole + Voûte",
     "CL_DV_OV_g800_mode_hot_air": "Air chaud",
