--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "ऊर्जा उपयोग डेटा के बारे में \n\n दर्शाए गए ऊर्जा उपयोग और बचत अनुमान हैं, सटीक माप नहीं। \n\n हमारे अनुमान नियंत्रित परीक्षणों पर आधारित हैं, इसलिए आपके वास्तविक परिणाम भिन्न हो सकते हैं। \n\n वास्तविक विश्व में ऊर्जा का उपयोग आपके विशिष्ट वातावरण और आदतों पर निर्भर करता है। \n\n हमारे ऐप की रीडिंग आपके उपयोगिता मीटर या अन्य उपकरणों से भिन्न हो सकती है।",
+    "how_data_calculate_tip": "दर्शाए गए ऊर्जा उपयोग और बचत अनुमान हैं, सटीक माप नहीं। \n\n हमारे अनुमान नियंत्रित परीक्षणों पर आधारित हैं, इसलिए आपके वास्तविक परिणाम भिन्न हो सकते हैं। \n\n वास्तविक विश्व में ऊर्जा का उपयोग आपके विशिष्ट वातावरण और आदतों पर निर्भर करता है। \n\n हमारे ऐप की रीडिंग आपके उपयोगिता मीटर या अन्य उपकरणों से भिन्न हो सकती है।",
     "select_statistic_range_key": "सांख्यिकीय सीमा चुनें",
     "overview_key": "अवलोकन",
     "value_must_between_10_9999_key": "मान 10 और 9999 के बीच होनी चाहिए।",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "\"डिवाइस जोड़ें\" पर जाने के लिए बटन को घुमाएं और \"एंटर\" पर क्लिक करें।",
-    "how_data_is_calculate_key": "डेटा की गणना कैसे की जाती है",
+    "how_data_is_calculate_key": "ऊर्जा उपयोग डेटा के बारे में",
     "energy_select_device_ktip_key": "कृपया ध्यान दें कि आप केवल चालू उपकरणों पर ही ECO मोड शुरू कर सकते हैं।",
     "CL_DV_OV_g800_mode_bottom_top": "निचला + शीर्ष हीटर",
     "CL_DV_OV_g800_mode_hot_air": "गरम हवा",
