--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "Uključeno tijekom uporabe",
     "restart": "ponovno pokreni",
-    "how_data_calculate_tip": "O podacima o potrošnji energije \n\n Prikazana potrošnja energije i ušteda su procjene, a ne točna mjerenja. \n\n Naše se procjene temelje na kontroliranim testovima, tako da vaši stvarni rezultati mogu varirati. \n\n Korištenje energije u stvarnom svijetu ovisi o vašem specifičnom okruženju i navikama. \n\n Očitanja naše aplikacije mogu se razlikovati od vašeg mjerača ili drugih uređaja.",
+    "how_data_calculate_tip": "Prikazana potrošnja i ušteda energije su procjene, a ne točna mjerenja. \n\n Naše se procjene temelje na kontroliranim testovima, tako da vaši stvarni rezultati mogu varirati. \n\n Korištenje energije u stvarnom svijetu ovisi o vašem specifičnom okruženju i navikama. \n\n Očitanja naše aplikacije mogu se razlikovati od vašeg mjerača ili drugih uređaja.",
     "select_statistic_range_key": "odaberite statistički raspon",
     "overview_key": "pregled",
     "value_must_between_10_9999_key": "Vrijednost mora biti između 10 i 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "Zakrenite tipku za odabit programa na \"Connection setup\" i kliknite na \"Enter\".",
     "wm86_and_td76_ui1_p_step2": "Zakrenite tipku za odabit programa na \"Add device\" i kliknite na \"Enter\".",
-    "how_data_is_calculate_key": "Kako se podaci izračunavaju",
+    "how_data_is_calculate_key": "O podacima o potrošnji energije",
     "energy_select_device_ktip_key": "Imajte na umu da ECO način rada možete pokrenuti samo na uređajima koji su u radu.",
     "CL_DV_OV_g800_mode_bottom_top": "Donji + gornji grijač",
     "CL_DV_OV_g800_mode_hot_air": "Vrući zrak",
