--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Az energiafelhasználási adatokról \n\n A feltüntetett energiafelhasználás és megtakarítás becslések, nem pontos mérések. \n\n Becsléseink ellenőrzött teszteken alapulnak, így az Ön tényleges eredményei eltérhetnek. \n\n A valós energiafelhasználás az Ön konkrét környezetétől és szokásaitól függ. \n\n Alkalmazásunk értékei eltérhetnek a közüzemi mérőtől vagy más eszközöktől.",
+    "how_data_calculate_tip": "A feltüntetett energiafelhasználás és megtakarítás becslések, nem pontos mérések. \n\n Becsléseink ellenőrzött teszteken alapulnak, így az Ön tényleges eredményei eltérhetnek. \n\n A valós világ energiafelhasználása az Ön konkrét környezetétől és szokásaitól függ. \n\n Alkalmazásunk értékei eltérhetnek a közüzemi mérőtől vagy más eszközöktől.",
     "select_statistic_range_key": "válassza a statisztikai tartományt",
     "overview_key": "áttekintés",
     "value_must_between_10_9999_key": "Az értéknek 10 és 9999 között kell lennie.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Fordítsa el a tudást, hogy lépjen az \"Eszköz hozzáadása\" elemre, és kattintson az \"Enter\" gombra.",
-    "how_data_is_calculate_key": "Hogyan számítják ki az adatokat",
+    "how_data_is_calculate_key": "Az energiafelhasználási adatokról",
     "energy_select_device_ktip_key": "Kérjük, vegye figyelembe, hogy az ECO módot csak működő eszközökön indíthatja el.",
     "CL_DV_OV_g800_mode_bottom_top": "Alsó + felső égő",
     "CL_DV_OV_g800_mode_hot_air": "Forró levegő",
