--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Tentang data penggunaan energi \n\n Penggunaan dan penghematan energi yang ditampilkan hanyalah perkiraan, bukan pengukuran pasti. \n\n Perkiraan kami didasarkan pada pengujian terkontrol, sehingga hasil sebenarnya mungkin berbeda. \n\n Penggunaan energi di dunia nyata bergantung pada lingkungan dan kebiasaan spesifik Anda. \n\n Pembacaan aplikasi kami mungkin berbeda dari meteran utilitas atau perangkat lain.",
+    "how_data_calculate_tip": "Penggunaan dan penghematan energi yang ditampilkan hanyalah perkiraan, bukan pengukuran pasti. \n\n Perkiraan kami didasarkan pada pengujian terkontrol, sehingga hasil sebenarnya mungkin berbeda. \n\n Penggunaan energi di dunia nyata bergantung pada lingkungan dan kebiasaan spesifik Anda. \n\n Pembacaan aplikasi kami mungkin berbeda dari meteran utilitas atau perangkat lain.",
     "select_statistic_range_key": "pilih rentang statistik",
     "overview_key": "gambaran",
     "value_must_between_10_9999_key": "Nilai harus antara 10 dan 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Balikkan pengetahuan untuk pindah ke \"Tambahkan perangkat\" dan klik \"Enter\".",
-    "how_data_is_calculate_key": "Bagaimana data dihitung",
+    "how_data_is_calculate_key": "Tentang data penggunaan energi",
     "energy_select_device_ktip_key": "Harap diperhatikan bahwa Anda hanya dapat memulai mode ECO pada perangkat yang sedang beroperasi.",
     "CL_DV_OV_g800_mode_bottom_top": "Pemanas Bawah + Atas",
     "CL_DV_OV_g800_mode_hot_air": "Udara panas",
