--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Informazioni sui dati sul consumo energetico \n\n Il consumo energetico e i risparmi indicati sono stime, non misurazioni esatte. \n\n Le nostre stime si basano su test controllati, pertanto i risultati effettivi potrebbero variare. \n\n Il consumo di energia nel mondo reale dipende dal tuo ambiente e dalle tue abitudini specifici. \n\n Le letture della nostra app potrebbero differire da quelle del tuo contatore o di altri dispositivi.",
+    "how_data_calculate_tip": "Il consumo energetico e i risparmi mostrati sono stime, non misurazioni esatte. \n\n Le nostre stime si basano su test controllati, pertanto i risultati effettivi potrebbero variare. \n\n Il consumo di energia nel mondo reale dipende dal tuo ambiente e dalle tue abitudini specifici. \n\n Le letture della nostra app potrebbero differire da quelle del tuo contatore o di altri dispositivi.",
     "select_statistic_range_key": "selezionare l'intervallo statistico",
     "overview_key": "panoramica",
     "value_must_between_10_9999_key": "Il valore deve essere compreso tra 10 e 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Girare la scheda per passare a \"Aggiungi dispositivo\" e fare clic su \"Invio\".",
-    "how_data_is_calculate_key": "Come vengono calcolati i dati",
+    "how_data_is_calculate_key": "Informazioni sui dati sul consumo energetico",
     "energy_select_device_ktip_key": "Si prega di notare che è possibile avviare la modalità ECO solo sui dispositivi in funzione.",
     "CL_DV_OV_g800_mode_bottom_top": "Riscaldatore inferiore + superiore",
     "CL_DV_OV_g800_mode_hot_air": "Aria calda",
