--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "エネルギー使用データについて\n\n表示されるエネルギー使用量と節約量は推定値であり、正確な測定値ではありません。 \n\n当社の推定値は管理されたテストに基づいているため、実際の結果は異なる場合があります。 \n\n実際のエネルギー使用量は、特定の環境と習慣によって異なります。 \n\n当アプリの測定値は、ユーティリティメーターや他のデバイスの測定値と異なる場合があります。",
+    "how_data_calculate_tip": "表示されるエネルギー使用量と節約量は推定値であり、正確な測定値ではありません。 \n\n当社の推定値は管理されたテストに基づいているため、実際の結果は異なる場合があります。 \n\n実際のエネルギー使用量は、特定の環境と習慣によって異なります。 \n\n当アプリの測定値は、ユーティリティメーターや他のデバイスの測定値と異なる場合があります。",
     "select_statistic_range_key": "統計範囲を選択",
     "overview_key": "概要",
     "value_must_between_10_9999_key": "値は10から9999の間でなければなりません。",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "ノブを回して「デバイスの追加」に移動し、「Enter」をクリックします。",
-    "how_data_is_calculate_key": "データはどのように計算されるか",
+    "how_data_is_calculate_key": "エネルギー使用データについて",
     "energy_select_device_ktip_key": "稼働中のデバイスでのみECOモードを開始できますのでご注意ください。",
     "CL_DV_OV_g800_mode_bottom_top": "ボトム+トップヒーター",
     "CL_DV_OV_g800_mode_hot_air": "熱風",
