--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "에너지 사용 데이터 정보 \n\n 표시된 에너지 사용량 및 절감액은 정확한 측정치가 아닌 추정치입니다. \n\n 우리의 추정치는 통제된 테스트를 기반으로 하므로 실제 결과는 다를 수 있습니다. \n\n 실제 에너지 사용은 특정 환경과 습관에 따라 달라집니다. \n\n 당사 앱의 판독값은 유틸리티 측정기 또는 기타 장치와 다를 수 있습니다.",
+    "how_data_calculate_tip": "표시된 에너지 사용량 및 절감액은 정확한 측정치가 아닌 추정치입니다. \n\n 우리의 추정치는 통제된 테스트를 기반으로 하므로 실제 결과는 다를 수 있습니다. \n\n 실제 에너지 사용은 특정 환경과 습관에 따라 달라집니다. \n\n 당사 앱의 판독값은 유틸리티 측정기 또는 기타 장치와 다를 수 있습니다.",
     "select_statistic_range_key": "통계 범위 선택",
     "overview_key": "개요",
     "value_must_between_10_9999_key": "값은 10에서 9999 사이여야 합니다.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "\"장치 추가\"로 이동하려면 \"입력\"을 클릭하십시오.",
-    "how_data_is_calculate_key": "데이터가 어떻게 계산되는지",
+    "how_data_is_calculate_key": "에너지 사용 데이터 정보",
     "energy_select_device_ktip_key": "장치가 작동 중일 때만 ECO 모드를 시작할 수 있습니다.",
     "CL_DV_OV_g800_mode_bottom_top": "하단 + 상단 히터",
     "CL_DV_OV_g800_mode_hot_air": "뜨거운 공기",
