--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Mengenai data penggunaan tenaga \n\n Penggunaan tenaga dan penjimatan yang ditunjukkan adalah anggaran, bukan ukuran tepat. \n\n Anggaran kami adalah berdasarkan ujian terkawal, jadi keputusan sebenar anda mungkin berbeza-beza. \n\n Penggunaan tenaga dunia sebenar bergantung pada persekitaran dan tabiat khusus anda. \n\n Bacaan apl kami mungkin berbeza daripada meter utiliti anda atau peranti lain.",
+    "how_data_calculate_tip": "Penggunaan tenaga dan penjimatan yang ditunjukkan adalah anggaran, bukan ukuran tepat. \n\n Anggaran kami adalah berdasarkan ujian terkawal, jadi keputusan sebenar anda mungkin berbeza-beza. \n\n Penggunaan tenaga dunia sebenar bergantung pada persekitaran dan tabiat khusus anda. \n\n Bacaan apl kami mungkin berbeza daripada meter utiliti anda atau peranti lain.",
     "select_statistic_range_key": "pilih julat statistik",
     "overview_key": "ikhtisar",
     "value_must_between_10_9999_key": "Nilai mesti antara 10 dan 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Hidupkan pengetahuan untuk beralih ke \"Tambah peranti\" dan klik pada \"Enter\".",
-    "how_data_is_calculate_key": "Bagaimana data dikira",
+    "how_data_is_calculate_key": "Mengenai data penggunaan tenaga",
     "energy_select_device_ktip_key": "Sila ambil perhatian bahawa anda hanya boleh memulakan mod ECO pada peranti yang beroperasi.",
     "CL_DV_OV_g800_mode_bottom_top": "Pemanas bawah + atas",
     "CL_DV_OV_g800_mode_hot_air": "Udara panas",
