--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Om data om energibruk \n\n Energibruken og besparelsene som vises er anslag, ikke eksakte målinger. \n\n Våre estimater er basert på kontrollerte tester, så de faktiske resultatene dine kan variere. \n\n Den virkelige energibruken avhenger av ditt spesifikke miljø og dine vaner. \n\n Appens målinger kan avvike fra verktøymåleren eller andre enheter.",
+    "how_data_calculate_tip": "Energibruken og besparelsene som vises er anslag, ikke eksakte målinger. \n\n Våre estimater er basert på kontrollerte tester, så de faktiske resultatene dine kan variere. \n\n Den virkelige energibruken avhenger av ditt spesifikke miljø og dine vaner. \n\n Appens målinger kan avvike fra verktøymåleren eller andre enheter.",
     "select_statistic_range_key": "velg statistisk område",
     "overview_key": "oversikt",
     "value_must_between_10_9999_key": "Verdien må være mellom 10 og 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Vri på knappen for å gå til \"Legg til enhet\" og klikk på \"Enter\".",
-    "how_data_is_calculate_key": "Hvordan data beregnes",
+    "how_data_is_calculate_key": "Om data om energibruk",
     "energy_select_device_ktip_key": "Vær oppmerksom på at du bare kan starte ECO-modus på enheter som er i drift.",
     "CL_DV_OV_g800_mode_bottom_top": "Undervarme + overvarme",
     "CL_DV_OV_g800_mode_hot_air": "Varmluft",
