--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "AAN tijdens gebruik",
     "restart": "",
-    "how_data_calculate_tip": "Over energieverbruiksgegevens \n\n Het weergegeven energieverbruik en de weergegeven besparingen zijn schattingen en geen exacte metingen. \n\n Onze schattingen zijn gebaseerd op gecontroleerde tests, dus uw werkelijke resultaten kunnen variëren. \n\n Het energieverbruik in de praktijk hangt af van uw specifieke omgeving en gewoonten. \n\n De meetwaarden van onze app kunnen afwijken van uw energiemeter of andere apparaten.",
+    "how_data_calculate_tip": "Het weergegeven energieverbruik en de weergegeven besparingen zijn schattingen en geen exacte metingen. \n\n Onze schattingen zijn gebaseerd op gecontroleerde tests, dus uw werkelijke resultaten kunnen variëren. \n\n Het energieverbruik in de praktijk hangt af van uw specifieke omgeving en gewoonten. \n\n De meetwaarden van onze app kunnen afwijken van uw energiemeter of andere apparaten.",
     "select_statistic_range_key": "selecteer statistisch bereik",
     "overview_key": "overzicht",
     "value_must_between_10_9999_key": "Waarde moet tussen 10 en 9999 liggen.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Draai aan de knop om naar \"Apparaat toevoegen\" te gaan en klik op \"Enter\".",
-    "how_data_is_calculate_key": "Hoe gegevens worden berekend",
+    "how_data_is_calculate_key": "Over energieverbruiksgegevens",
     "energy_select_device_ktip_key": "Houd er rekening mee dat u de ECO-modus alleen kunt starten bij apparaten die in werking zijn.",
     "CL_DV_OV_g800_mode_bottom_top": "Onderwarmte + Bovenwarmte",
     "CL_DV_OV_g800_mode_hot_air": "Hetelucht",
