--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Despre datele de utilizare a energiei \n\n Consumul de energie și economiile afișate sunt estimări, nu măsurători exacte. \n\n Estimările noastre se bazează pe teste controlate, astfel încât rezultatele dvs. reale pot varia. \n\n Utilizarea energiei în lumea reală depinde de mediul și obiceiurile dumneavoastră specifice. \n\n Citirile aplicației noastre pot diferi de contorul dvs. de utilitate sau de alte dispozitive.",
+    "how_data_calculate_tip": "Consumul de energie și economiile afișate sunt estimări, nu măsurători exacte. \n\n Estimările noastre se bazează pe teste controlate, astfel încât rezultatele reale pot varia. \n\n Utilizarea energiei în lumea reală depinde de mediul și obiceiurile dumneavoastră specifice. \n\n Citirile aplicației noastre pot diferi de contorul dvs. de utilitate sau de alte dispozitive.",
     "select_statistic_range_key": "selectați intervalul statistic",
     "overview_key": "prezentare generală",
     "value_must_between_10_9999_key": "Valoarea trebuie să fie între 10 și 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Întoarceți cunoștințele pentru a trece la „Adăugați dispozitiv” și faceți clic pe „Enter”.",
-    "how_data_is_calculate_key": "Cum sunt calculate datele",
+    "how_data_is_calculate_key": "Despre datele de utilizare a energiei",
     "energy_select_device_ktip_key": "Vă rugăm să rețineți că puteți porni modul ECO doar pe dispozitivele în funcțiune.",
     "CL_DV_OV_g800_mode_bottom_top": "Încălzire inferioară + superioară",
     "CL_DV_OV_g800_mode_hot_air": "Aer cald",
