--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Om energianvändningsdata \n\n Energianvändningen och besparingarna som visas är uppskattningar, inte exakta mätningar. \n\n Våra uppskattningar är baserade på kontrollerade tester, så dina faktiska resultat kan variera. \n\n Den verkliga energianvändningen beror på din specifika miljö och dina vanor. \n\n Vår apps avläsningar kan skilja sig från din elmätare eller andra enheter.",
+    "how_data_calculate_tip": "Energianvändningen och besparingarna som visas är uppskattningar, inte exakta mätningar. \n\n Våra uppskattningar är baserade på kontrollerade tester, så dina faktiska resultat kan variera. \n\n Den verkliga energianvändningen beror på din specifika miljö och dina vanor. \n\n Vår apps avläsningar kan skilja sig från din elmätare eller andra enheter.",
     "select_statistic_range_key": "välj statistiskt intervall",
     "overview_key": "översikt",
     "value_must_between_10_9999_key": "Värdet måste vara mellan 10 och 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Vrid på knappen för att flytta till \"Lägg till enhet\" och klicka på \"Enter\".",
-    "how_data_is_calculate_key": "Hur data beräknas",
+    "how_data_is_calculate_key": "Om energianvändningsdata",
     "energy_select_device_ktip_key": "Observera att du bara kan starta ECO-läget på enheter som är i drift.",
     "CL_DV_OV_g800_mode_bottom_top": "Under + Övervärme",
     "CL_DV_OV_g800_mode_hot_air": "Varm luft",
