--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "เกี่ยวกับข้อมูลการใช้พลังงาน \n\n การใช้พลังงานและการประหยัดพลังงานที่แสดงเป็นเพียงการประมาณการ ไม่ใช่การวัดที่แม่นยำ \n\n การประมาณการของเราอิงตามการทดสอบที่มีการควบคุม ดังนั้นผลลัพธ์ที่แท้จริงของคุณอาจแตกต่างกันไป \n\n การใช้พลังงานในโลกแห่งความเป็นจริงขึ้นอยู่กับสภาพแวดล้อมและนิสัยเฉพาะของคุณ \n\n ค่าที่อ่านได้ของแอปของเราอาจแตกต่างจากมิเตอร์ไฟฟ้าหรืออุปกรณ์อื่นๆ ของคุณ",
+    "how_data_calculate_tip": "การใช้พลังงานและการประหยัดพลังงานที่แสดงเป็นเพียงการประมาณการ ไม่ใช่การวัดที่แม่นยำ \n\n การประมาณการของเราอิงตามการทดสอบที่มีการควบคุม ดังนั้นผลลัพธ์ที่แท้จริงของคุณอาจแตกต่างกันไป \n\n การใช้พลังงานในโลกแห่งความเป็นจริงขึ้นอยู่กับสภาพแวดล้อมและนิสัยเฉพาะของคุณ \n\n ค่าที่อ่านได้ของแอปของเราอาจแตกต่างจากมิเตอร์ไฟฟ้าหรืออุปกรณ์อื่นๆ ของคุณ",
     "select_statistic_range_key": "เลือกช่วงทางสถิติ",
     "overview_key": "ภาพรวม",
     "value_must_between_10_9999_key": "ค่าต้องอยู่ระหว่าง 10 ถึง 9999",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "เปลี่ยนความรู้เพื่อย้ายไปที่ \"เพิ่มอุปกรณ์\" และคลิกที่ \"Enter\"",
-    "how_data_is_calculate_key": "ข้อมูลคำนวณอย่างไร",
+    "how_data_is_calculate_key": "เกี่ยวกับข้อมูลการใช้พลังงาน",
     "energy_select_device_ktip_key": "โปรดทราบว่าคุณสามารถเริ่มโหมด ECO ของอุปกรณ์ที่กำลังทำงานอยู่เท่านั้น",
     "CL_DV_OV_g800_mode_bottom_top": "ฮีตเตอร์ล่าง+บน",
     "CL_DV_OV_g800_mode_hot_air": "ลมร้อน",
