--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Enerji kullanım verileri hakkında \n\n Gösterilen enerji kullanımı ve tasarruflar kesin ölçümler değil, tahminlerdir. \n\n Tahminlerimiz kontrollü testlere dayanmaktadır, dolayısıyla gerçek sonuçlarınız farklılık gösterebilir. \n\n Gerçek dünyadaki enerji kullanımı, özel ortamınıza ve alışkanlıklarınıza bağlıdır. \n\n Uygulamamızın okumaları elektrik sayacınızdan veya diğer cihazlarınızdan farklı olabilir.",
+    "how_data_calculate_tip": "Gösterilen enerji kullanımı ve tasarruflar kesin ölçümler değil, tahminlerdir. \n\n Tahminlerimiz kontrollü testlere dayanmaktadır, dolayısıyla gerçek sonuçlarınız farklılık gösterebilir. \n\n Gerçek dünyadaki enerji kullanımı, özel ortamınıza ve alışkanlıklarınıza bağlıdır. \n\n Uygulamamızın okumaları elektrik sayacınızdan veya diğer cihazlarınızdan farklı olabilir.",
     "select_statistic_range_key": "istatistik aralığı seçin",
     "overview_key": "genel bakış",
     "value_must_between_10_9999_key": "Değer 10 ile 9999 arasında olmalıdır.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "\"Cihaz ekle\"ye geçmek için bilgiyi çevirin ve \"Enter\"a tıklayın.",
-    "how_data_is_calculate_key": "Veriler nasıl hesaplanır",
+    "how_data_is_calculate_key": "Enerji kullanım verileri hakkında",
     "energy_select_device_ktip_key": "Lütfen ECO modunu yalnızca çalışan cihazlarda başlatabileceğinizi unutmayın.",
     "CL_DV_OV_g800_mode_bottom_top": "Alt + Üst ısıtıcı",
     "CL_DV_OV_g800_mode_hot_air": "Sıcak hava",
