--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Про дані про використання енергії \n\n Показане споживання та економія енергії є приблизними, а не точними вимірюваннями. \n\n Наші оцінки базуються на контрольованих тестах, тому ваші фактичні результати можуть відрізнятися. \n\n Реальне використання енергії залежить від вашого середовища та звичок. \n\n Показання нашого додатка можуть відрізнятися від показників вашого лічильника комунальних послуг або інших пристроїв.",
+    "how_data_calculate_tip": "Показане споживання та економія енергії є приблизними, а не точними вимірюваннями. \n\n Наші оцінки базуються на контрольованих тестах, тому ваші фактичні результати можуть відрізнятися. \n\n Реальне використання енергії залежить від вашого середовища та звичок. \n\n Показання нашого додатка можуть відрізнятися від показників вашого лічильника комунальних послуг або інших пристроїв.",
     "select_statistic_range_key": "виберіть статистичний діапазон",
     "overview_key": "огляд",
     "value_must_between_10_9999_key": "Значення повинно бути між 10 і 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Поверніть знать, щоб перейти до «Додати пристрій» і натисніть «Ввести».",
-    "how_data_is_calculate_key": "Як обчислюються дані",
+    "how_data_is_calculate_key": "Про дані про використання енергії",
     "energy_select_device_ktip_key": "Зверніть увагу, що режим ECO можна запускати лише на пристроях, які працюють.",
     "CL_DV_OV_g800_mode_bottom_top": "Нижній + верхній нагрівачі",
     "CL_DV_OV_g800_mode_hot_air": "Гаряче повітря",
