--- a/language/i18n_zh_CN.json
+++ b/language/i18n_zh_CN.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "关于能源使用数据\n\n所示的能源使用量和节省量是估计值，而不是精确测量值。 \n\n我们的估计是基于控制测试的，因此您的实际结果可能会有所不同。 \n\n现实世界的能源使用取决于您的具体环境和习惯。 \n\n我们的应用程序的读数可能与您的公用事业电表或其他设备的读数不同。",
+    "how_data_calculate_tip": "所示的能源使用量和节省量是估计值，而不是精确测量值。 \n\n我们的估计是基于控制测试的，因此您的实际结果可能会有所不同。 \n\n现实世界的能源使用取决于您的具体环境和习惯。 \n\n我们的应用程序的读数可能与您的公用事业电表或其他设备的读数不同。",
     "select_statistic_range_key": "选择统计范围",
     "overview_key": "概览",
     "value_must_between_10_9999_key": "值必须在10到9999之间。",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "",
-    "how_data_is_calculate_key": "数据是如何计算的",
+    "how_data_is_calculate_key": "关于能源使用数据",
     "energy_select_device_ktip_key": "请注意，您只能在设备运行时启动ECO模式。",
     "CL_DV_OV_g800_mode_bottom_top": "底部+顶部外圈加热",
     "CL_DV_OV_g800_mode_hot_air": "环形热风",
