--- a/language/i18n_zh_TW.json
+++ b/language/i18n_zh_TW.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "僅當設備開機時可用。",
     "asko_oven_on_during_on": "使用期間開啟",
     "restart": "重新開始",
-    "how_data_calculate_tip": "關於能源使用數據\n\n顯示的能源使用量和節省量均為估計值，並非精確測量值。 \n\n我們的估計是基於受控測試，因此您的實際結果可能會有所不同。 \n\n現實世界的能源使用取決於您的特定環境和習慣。 \n\n我們的應用程式的讀數可能與您的電錶或其他設備不同。",
+    "how_data_calculate_tip": "顯示的能源使用量和節省量均為估計值，並非精確測量值。 \n\n我們的估計是基於受控測試，因此您的實際結果可能會有所不同。 \n\n現實世界的能源使用取決於您的特定環境和習慣。 \n\n我們的應用程式的讀數可能與您的電錶或其他設備不同。",
     "select_statistic_range_key": "選擇統計範圍",
     "overview_key": "概览",
     "value_must_between_10_9999_key": "值必須在10到9999之間。",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "打開設備。向左轉動旋鈕存取“遠端啟動”，然後按一下“輸入設定”。",
     "wm86_and_td76_ui1_cs_step2": "轉動旋鈕移至“連接設定”，然後按“輸入”。",
     "wm86_and_td76_ui1_p_step2": "旋轉旋鈕移至“新增設備”，然後按一下“輸入”。",
-    "how_data_is_calculate_key": "數據是如何計算的",
+    "how_data_is_calculate_key": "關於能源使用數據",
     "energy_select_device_ktip_key": "請注意，您只能在設備運行時啟動ECO模式。",
     "CL_DV_OV_g800_mode_bottom_top": "底部+頂部加熱器",
     "CL_DV_OV_g800_mode_hot_air": "環形熱風",
