--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "על נתוני שימוש באנרגיה \n\n צריכת האנרגיה והחיסכון המוצגים הם הערכות, לא מדידות מדויקות. \n\n ההערכות שלנו מבוססות על בדיקות מבוקרות, כך שהתוצאות בפועל עשויות להשתנות. \n\n השימוש באנרגיה בעולם האמיתי תלוי בסביבה ובהרגלים הספציפיים שלך. \n\n קריאות האפליקציה שלנו עשויות להיות שונות ממד השירות שלך או ממכשירים אחרים.",
+    "how_data_calculate_tip": "צריכת האנרגיה והחיסכון המוצגים הם הערכות, לא מדידות מדויקות. \n\n ההערכות שלנו מבוססות על בדיקות מבוקרות, כך שהתוצאות בפועל עשויות להשתנות. \n\n השימוש באנרגיה בעולם האמיתי תלוי בסביבה ובהרגלים הספציפיים שלך. \n\n קריאות האפליקציה שלנו עשויות להיות שונות ממד השירות שלך או ממכשירים אחרים.",
     "select_statistic_range_key": "בחר טווח סטטיסטי",
     "overview_key": "סקירה כללית",
     "value_must_between_10_9999_key": "הערך חייב להיות בין 10 ל-9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "סובב את הידע כדי לעבור ל\"הוסף מכשיר\" ולחץ על \"Enter\".",
-    "how_data_is_calculate_key": "כיצד הנתונים מחושבים",
+    "how_data_is_calculate_key": "על נתוני שימוש באנרגיה",
     "energy_select_device_ktip_key": "שים לב שניתן להפעיל את מצב ECO רק במכשירים שפועלים.",
     "CL_DV_OV_g800_mode_bottom_top": "מחמם תחתון + עליון",
     "CL_DV_OV_g800_mode_hot_air": "אוויר חם",
