--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Энергияны пайдалану деректері туралы \n\n Көрсетілген энергияны пайдалану және үнемдеу нақты өлшемдер емес, шамаланған. \n\n Біздің бағалауларымыз бақыланатын сынақтарға негізделген, сондықтан сіздің нақты нәтижелеріңіз әртүрлі болуы мүмкін. \n\n Нақты әлемдегі энергияны пайдалану сіздің нақты ортаңызға және әдеттеріңізге байланысты. \n\n Біздің қолданбаның көрсеткіштері коммуналдық есептегіштен немесе басқа құрылғылардан өзгеше болуы мүмкін.",
+    "how_data_calculate_tip": "Көрсетілген энергияны пайдалану және үнемдеу нақты өлшемдер емес, шамаланған. \n\n Біздің бағалауларымыз бақыланатын сынақтарға негізделген, сондықтан сіздің нақты нәтижелеріңіз әртүрлі болуы мүмкін. \n\n Нақты әлемдегі энергияны пайдалану сіздің нақты ортаңызға және әдеттеріңізге байланысты. \n\n Біздің қолданбаның көрсеткіштері коммуналдық есептегіштен немесе басқа құрылғылардан өзгеше болуы мүмкін.",
     "select_statistic_range_key": "статистикалық ауқымды таңдаңыз",
     "overview_key": "шолу",
     "value_must_between_10_9999_key": "Мән 10 мен 9999 арасында болуы керек.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "«Құрылғы қосу» тармағына өту үшін білгішті бұрыңыз және «Енгізу» түймесін басыңыз.",
-    "how_data_is_calculate_key": "Деректер қалай есептеледі",
+    "how_data_is_calculate_key": "Энергияны пайдалану деректері туралы",
     "energy_select_device_ktip_key": "Назар аударыңыз, ECO режимін тек жұмыс істеп тұрған құрылғыларда ғана бастауға болады.",
     "CL_DV_OV_g800_mode_bottom_top": "Астынан қыздыру + үстінен қыздыру",
     "CL_DV_OV_g800_mode_hot_air": "Ыстық ауа",
