--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Sobre dados de uso de energia \n\n O uso e a economia de energia mostrados são estimativas e não medidas exatas. \n\n Nossas estimativas são baseadas em testes controlados, portanto seus resultados reais podem variar. \n\n O uso de energia no mundo real depende do seu ambiente e hábitos específicos. \n\n As leituras do nosso aplicativo podem diferir do seu medidor de serviços públicos ou de outros dispositivos.",
+    "how_data_calculate_tip": "O uso e a economia de energia mostrados são estimativas e não medidas exatas. \n\n Nossas estimativas são baseadas em testes controlados, portanto seus resultados reais podem variar. \n\n O uso de energia no mundo real depende do seu ambiente e hábitos específicos. \n\n As leituras do nosso aplicativo podem diferir do seu medidor de serviços públicos ou de outros dispositivos.",
     "select_statistic_range_key": "selecionar intervalo estatístico",
     "overview_key": "visão geral",
     "value_must_between_10_9999_key": "O valor deve estar entre 10 e 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Gire o conhecimento para ir para “Adicionar dispositivo” e clique em “Entrar”.",
-    "how_data_is_calculate_key": "Como são calculados os dados",
+    "how_data_is_calculate_key": "Sobre dados de uso de energia",
     "energy_select_device_ktip_key": "Por favor, tenha em atenção que só pode iniciar o modo ECO em dispositivos em funcionamento.",
     "CL_DV_OV_g800_mode_bottom_top": "Aquecedor inferior + superior",
     "CL_DV_OV_g800_mode_hot_air": "Ar quente",
