--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "О данных об энергопотреблении \n\n Показанные показатели энергопотребления и экономии являются приблизительными, а не точными измерениями. \n\n Наши оценки основаны на контролируемых тестах, поэтому ваши фактические результаты могут отличаться. \n\n Реальное потребление энергии зависит от вашей конкретной среды и привычек. \n\n Показания нашего приложения могут отличаться от показаний вашего счетчика коммунальных услуг или других устройств.",
+    "how_data_calculate_tip": "Показанные показатели энергопотребления и экономии являются приблизительными, а не точными измерениями. \n\n Наши оценки основаны на контролируемых тестах, поэтому ваши фактические результаты могут отличаться. \n\n Реальное потребление энергии зависит от вашей конкретной среды и привычек. \n\n Показания нашего приложения могут отличаться от показаний вашего счетчика коммунальных услуг или других устройств.",
     "select_statistic_range_key": "выберите статистический диапазон",
     "overview_key": "обзор",
     "value_must_between_10_9999_key": "Значение должно быть в пределах от 10 до 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Поверните ноу, чтобы перейти к «Добавить устройство» и нажмите «Ввод».",
-    "how_data_is_calculate_key": "Как рассчитываются данные",
+    "how_data_is_calculate_key": "О данных об энергопотреблении",
     "energy_select_device_ktip_key": "Обратите внимание, что режим ECO можно запустить только на работающих устройствах.",
     "CL_DV_OV_g800_mode_bottom_top": "Нагрев снизу + сверху",
     "CL_DV_OV_g800_mode_hot_air": "Вент. нагрев",
