--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "O údajoch o spotrebe energie \n\n Zobrazená spotreba energie a úspory sú odhady, nie presné merania. \n\n Naše odhady sú založené na kontrolovaných testoch, takže vaše skutočné výsledky sa môžu líšiť. \n\n Spotreba energie v reálnom svete závisí od vášho konkrétneho prostredia a zvykov. \n\n Hodnoty našej aplikácie sa môžu líšiť od vášho elektromera alebo iných zariadení.",
+    "how_data_calculate_tip": "Zobrazená spotreba energie a úspory sú odhady, nie presné merania. \n\n Naše odhady sú založené na kontrolovaných testoch, takže vaše skutočné výsledky sa môžu líšiť. \n\n Spotreba energie v reálnom svete závisí od vášho konkrétneho prostredia a zvykov. \n\n Hodnoty našej aplikácie sa môžu líšiť od vášho elektromera alebo iných zariadení.",
     "select_statistic_range_key": "vyberte štatistický rozsah",
     "overview_key": "prehľad",
     "value_must_between_10_9999_key": "Hodnota musí být mezi 10 a 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Presuňte sa na „Pridať zariadenie“ a kliknite na „Enter“.",
-    "how_data_is_calculate_key": "Ako sa počítajú údaje",
+    "how_data_is_calculate_key": "O údajoch o spotrebe energie",
     "energy_select_device_ktip_key": "Upozorňujeme, že režim ECO môžete spustiť iba na zariadeniach, ktoré sú v prevádzke.",
     "CL_DV_OV_g800_mode_bottom_top": "Dolný + horný ohrev",
     "CL_DV_OV_g800_mode_hot_air": "Horúci vzduch",
