--- a/language/i18n_sr_BA.json
+++ b/language/i18n_sr_BA.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "О подацима о потрошњи енергије \n\n Приказана потрошња енергије и уштеде су процене, а не тачна мерења. \n\n Наше процене су засноване на контролисаним тестовима, тако да ваши стварни резултати могу да варирају. \n\n Коришћење енергије у стварном свету зависи од вашег специфичног окружења и навика. \n\n Очитавања наше апликације могу се разликовати од вашег бројила или других уређаја.",
+    "how_data_calculate_tip": "Приказана потрошња енергије и уштеде су процене, а не тачна мерења. \n\n Наше процене су засноване на контролисаним тестовима, тако да ваши стварни резултати могу да варирају. \n\n Коришћење енергије у стварном свету зависи од вашег специфичног окружења и навика. \n\n Очитавања наше апликације могу се разликовати од вашег бројила или других уређаја.",
     "select_statistic_range_key": "изаберите статистички опсег",
     "overview_key": "преглед",
     "value_must_between_10_9999_key": "Vrednost mora biti između 10 i 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Пређите на „Додај уређај“ и кликните на „Ентер“.",
-    "how_data_is_calculate_key": "Како се подаци израчунавају",
+    "how_data_is_calculate_key": "О подацима о потрошњи енергије",
     "energy_select_device_ktip_key": "Имајте на уму да можете да покренете ECO режим само на уређајима који су у функцији.",
     "CL_DV_OV_g800_mode_bottom_top": "Donji + gornji grejač",
     "CL_DV_OV_g800_mode_hot_air": "Vrući vazduh",
