--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -3921,7 +3921,7 @@
     "power_on_tips": "",
     "asko_oven_on_during_on": "",
     "restart": "",
-    "how_data_calculate_tip": "Về dữ liệu sử dụng năng lượng \n\n Việc sử dụng và tiết kiệm năng lượng được hiển thị là ước tính, không phải số đo chính xác. \n\n Ước tính của chúng tôi dựa trên các thử nghiệm có kiểm soát, vì vậy kết quả thực tế của bạn có thể thay đổi. \n\n Việc sử dụng năng lượng trong thế giới thực phụ thuộc vào môi trường và thói quen cụ thể của bạn. \n\n Chỉ số trong ứng dụng của chúng tôi có thể khác với đồng hồ tiện ích của bạn hoặc các thiết bị khác.",
+    "how_data_calculate_tip": "Việc sử dụng và tiết kiệm năng lượng được hiển thị là ước tính, không phải số đo chính xác. \n\n Ước tính của chúng tôi dựa trên các thử nghiệm có kiểm soát, vì vậy kết quả thực tế của bạn có thể thay đổi. \n\n Việc sử dụng năng lượng trong thế giới thực phụ thuộc vào môi trường và thói quen cụ thể của bạn. \n\n Chỉ số trong ứng dụng của chúng tôi có thể khác với đồng hồ tiện ích của bạn hoặc các thiết bị khác.",
     "select_statistic_range_key": "chọn phạm vi thống kê",
     "overview_key": "tổng quan",
     "value_must_between_10_9999_key": "Giá trị phải nằm trong khoảng từ 10 đến 9999.",
@@ -3942,7 +3942,7 @@
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
     "wm86_and_td76_ui1_p_step2": "Xoay biết để di chuyển đến \"Thêm thiết bị\" và nhấp vào \"Enter\".",
-    "how_data_is_calculate_key": "Dữ liệu được tính toán như thế nào",
+    "how_data_is_calculate_key": "Về dữ liệu sử dụng năng lượng",
     "energy_select_device_ktip_key": "Xin lưu ý rằng bạn chỉ có thể bắt đầu chế độ ECO trên các thiết bị đang hoạt động.",
     "CL_DV_OV_g800_mode_bottom_top": "Máy sưởi dưới + trên",
     "CL_DV_OV_g800_mode_hot_air": "Làm nóng",
